fixed bubble overflow

--- a/css/style.css
+++ b/css/style.css
@@ -468,6 +468,7 @@ body {
 
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
 }
 
 .project-bubble {
